removed image from vehicle

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,5 +27,5 @@ security.jwt.expiration-time=14400000
 springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.path=/swagger-ui
 #for uploading images
-file.upload-dir=/home/lilaje/workspaces/rental/git/images
+#file.upload-dir=/home/lilaje/workspaces/rental/git/images
 
